--- a/templates/index.html
+++ b/templates/index.html
@@ -29,34 +29,18 @@
                 <h1>Latest Posts</h1>
             </div>
             <div class="post">
-                <a href="">
+                {% for post in posts %}
+                <a href="/posts/{{post.slug}}">
                     <div class="post__items">
-                        <img src="static/img/post1.png" alt="Climate Change">
-                        <h1>Youth for Environmental Conservation</h1>
+                        <img src="/{{post.thumbnail}}" alt="Climate Change">
+                        <h1>{{post.title}}</h1>
                     </div>
                 </a>
-                <a href="">
-                    <div class="post__items">
-                        <img src="static/img/post2.jpg" alt="Climate Change">
-                        <h1>Agriculture and its importance</h1>
-                    </div>
-                </a>
-                <a href="">
-                    <div class="post__items">
-                        <img src="static/img/post3.jpg" alt="Climate Change">
-                        <h1>Benefit of Green Vegetables</h1>
-                    </div>
-                </a>
-                <a href="">
-                    <div class="post__items">
-                        <img src="static/img/post4.jpg" alt="Climate Change">
-                        <h1>Awareness Measure against Soil Erosoin</h1>
-                    </div>
-                </a>
+                {% endfor %}
             </div>
             <div class="seemore">
                 <button>
-                    <a href="">See More</a>
+                    <a href="/posts/">See More</a>
                     <i class="uil uil-arrow-circle-right"></i>
                 </button>
             </div>
